--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "11.1.7",
     "lucide-react": "^0.537.0",
     "next": "14.2.2",
     "react": "^18",
