--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.8.6",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@uploadthing/react": "^7.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "11.1.7",
@@ -18,8 +20,10 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "14.2.3",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.7.3"
   },
   "devDependencies": {
     "@types/node": "^20",
