--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.8.6",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.15",
     "@uploadthing/react": "^7.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -23,7 +24,8 @@
     "react-dropzone": "14.2.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^7.7.3"
+    "uploadthing": "^7.7.3",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/node": "^20",
